using UnityEngine;

public static class PlayerAnimationConstants
{
    public static readonly int Speed = Animator.StringToHash("Speed");
    public static readonly int Attack = Animator.StringToHash("Attack");
    public static readonly int Hit = Animator.StringToHash("Hit");
    public static readonly int HitInAir = Animator.StringToHash("Hit1");
    public static readonly int Aim = Animator.StringToHash("Aim");
    public static readonly int PickUp = Animator.StringToHash("PickUp");
    public static readonly int Build = Animator.StringToHash("Build");
    public static readonly int PullItem = Animator.StringToHash("PullItem");
}
